Fix responsive on small screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,7 +327,7 @@ h1:hover {
     }
 
     .hero {
-        max-height: 50vh;
+        max-height: 80vh;
     }
 
     .cover-text-section {
@@ -353,5 +353,6 @@ h1:hover {
     .cover-text h2 {
         line-height: 1em;
         font-size: 1.25em;
+        font-size: small;
     }
 }
